--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.7",
     "firebase": "^10.14.1",
+    "query-string": "^9.1.1",
+    "querystring": "^0.2.1",
     "sweetalert2": "^11.14.3",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5",
