--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.0",
+    "bootstrap-vue-3": "^0.3.12",
+    "boxicons": "^2.1.4",
     "firebase": "^10.14.1",
     "query-string": "^9.1.1",
     "querystring": "^0.2.1",
-    "sweetalert2": "^11.14.3",
+    "sweetalert2": "^11.6.13",
+    "swiper": "^11.1.14",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5",
     "vuex": "^4.0.2"
